--- a/index.html
+++ b/index.html
@@ -1,34 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index_style.css">
+    <!-- link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- link fontes -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Teste_Interago</title>
 </head>
 <body>
-    <!-- Div tela inicial -->
+    <!-- tela inicial -->
     <div class="container-fluid" id="tela-inicial">
-        <div class="d-flex justify-content-between">
-            <!-- <p>ícone menu</p> -->
-             <!-- Substituir o <p> pelo logo e encontrar uma maneira de centralizar -->
-            <p>logo</p>
-            <div>
-                <a href="#" class="btn">Acesse sua conta</a>
+        <div class="row justify-content-center" style="padding-top: 42px;">
+            <div class="col-4">
+                teste
+            </div>
+            <div class="col-4">
+                <img src="/images/interago_novo_logo.svg#svgView(viewBox(220, 470, 200, 200))" height="50px" width="150px">
+            </div>
+            <div class="col-4">
+                <a href="#" class="btn" style="margin-right: 8px">Acesse sua conta</a>
                 <a href="#" class="btn" style="background-image: none; border-color: white; ">Suporte</a> 
             </div>
         </div>
-        <div class="text-center" style="margin-top: 188px">
-            <h1 style="font-size: 80px; margin-bottom:45px">Plataforma para lojas virtuais, blogs e websites</h1>
-            <p style="font-size: 20px">Uma plataforma brasileira que reúne recursos de ponta para amplificar seu negócio na internet</p>
-            <a href="#" class="btn" style="padding: 16px 13px; border-radius: 28px;">Agendar demonstração</a>
+        <div class="text-center" style="margin-top: 188px;">
+            <h1 style="font-weight: 700; font-size: 80px; margin-bottom:45px;">Plataforma para lojas virtuais, blogs e websites</h1>
+            <p class="mx-auto" style="font-size: 20px; width: 570px">Uma plataforma brasileira que reúne recursos de ponta para amplificar seu negócio na internet</p>
+            <a href="#" class="btn" style="padding: 13px 13px; border-radius: 28px;">Agendar demonstração</a>
         </div>
-        <!-- Div das imagens -->
-        <div>
-            <img href="/images/inicial-interago.png" alt="imagem_app_interago" height="100px">
+
+        <!-- Adicionar imagens -->
+
+    </div>
+    <!-- tela recursos -->
+    <div class="container-fluid" id="tela-recursos">
+        <div class="row">
+            <div class="col-2">
+                adicionar "timeline"
+            </div>
+            <div class="col-6">
+                <h2 style="font-weight: 700; font-size:40px; margin-bottom: 40px;">Dê o primeiro passo para elevar seu negócio para o próximo nível com a internet</h2>
+                <p style="margin-bottom: 50px;">Com um ambiente desenvolvido para atender diferentes categorias de sites, 
+                    o Interago oferece excelência na criação de lojas virtuais, portais de notícias e sites institucionais. 
+                    O primeiro passo para o sucesso é dado ao falar com nossos especialistas para conhecer todas as oportunidades para sua empresa.
+                </p>
+                <a href="#" class="btn" style="margin-bottom: 179px;">Começar agora</a>
+            </div>
+            <div class="col-4">
+                Imagem
+            </div>
+        </div>
+        <div class="row">
+            imagens
         </div>
     </div>
+    <!-- tela integrações -->
+     <div id="tela-integracao">
+        <h2 style="font-weight: 700; font-size: 50px">Integrações seguras e fundamentais para o sucesso</h2>
+     </div>
 </body>
 </html>
