--- a/index.html
+++ b/index.html
@@ -91,25 +91,41 @@
     <div class="container-fluid" id="tela-recursos">
         <div class="row w-100 d-flex align-items-center">
             <!-- navbar vertical -->
-            <div class="col-lg-3 d-flex justify-content-center">
-                <ul id="timeline-vertical" class="nav nav-tabs flex-column" role="tablist">
-                    <li class="nav-item"><div class="node ativo nav-item"></div><a id="link-1" class="nav-link active" href="#solicitar-site" data-bs-toggle="tab">1. Solicite seu site</a></li>
-                    <li class="nav-item"><div class="divider inativo"></div></li>
-                    <li class="nav-item"><div class="node inativo"></div><a id="link-2" class="nav-link" href="#venda-online" data-bs-toggle="tab">2. Venda online</a></li>
-                    <li class="nav-item"><div class="divider inativo"></div></li>
-                    <li class="nav-item"><div class="node inativo"></div><a id="link-3" class="nav-link" href="#gerencie" data-bs-toggle="tab">3. Gerencie</a></li>
-                    <li class="nav-item"><div class="divider inativo"></div></li>
-                    <li class="nav-item"><div class="node inativo"></div><a id="link-4" class="nav-link" href="#obter-result" data-bs-toggle="tab">4. Obtenha resultados</a></li>
-                </ul>
-
-                <ul id="timeline-horizontal" class="nav nav-tabs flex-row" role="tablist">
-                    <li><div class="node ativo nav-item"></div><a id="link-1" class="nav-link active" href="#solicitar-site" data-bs-toggle="tab">1. Solicite seu site</a></li>
-                    <li><div class="divider inativo"></div></li>
-                    <li><div class="node inativo"></div><a id="link-2" class="nav-link" href="#venda-online" data-bs-toggle="tab">2. Venda online</a></li>
-                    <li><div class="divider inativo"></div></li>
-                    <li><div class="node inativo"></div><a id="link-3" class="nav-link" href="#gerencie" data-bs-toggle="tab">3. Gerencie</a></li>
-                    <li><div class="divider inativo"></div></li>
-                    <li><div class="node inativo"></div><a id="link-4" class="nav-link" href="#obter-result" data-bs-toggle="tab">4. Obtenha resultados</a></li>
+            <div id="div-nav" class="col-lg-3 d-flex justify-content-center">
+                <ul id="timeline-nav" class="nav nav-tabs flex-column" role="tablist">
+                    <li class="nav-item">
+                        <div class="container-link-node">
+                            <div class="node ativo nav-item"></div>
+                            <a id="link-1" class="nav-link active text-center" href="#solicitar-site" data-bs-toggle="tab">1. Solicite seu site</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <div class="divider inativo"></div>
+                    </li>
+                    <li class="nav-item">
+                        <div class="container-link-node">
+                            <div class="node inativo"></div>
+                            <a id="link-2" class="nav-link text-center" href="#venda-online" data-bs-toggle="tab">2. Venda online</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <div class="divider inativo"></div>
+                    </li>
+                    <li class="nav-item">
+                        <div class="container-link-node">
+                            <div class="node inativo"></div>
+                            <a id="link-3" class="nav-link text-center" href="#gerencie" data-bs-toggle="tab">3. Gerencie</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <div class="divider inativo"></div>
+                    </li>
+                    <li class="nav-item">
+                        <div class="container-link-node">
+                            <div class="node inativo"></div>
+                            <a id="link-4" class="nav-link text-center" href="#obter-result" data-bs-toggle="tab">4. Obtenha resultados</a>
+                        </div>
+                    </li>
                 </ul>
             </div>
 
@@ -160,8 +176,8 @@
                 </div>
                 <!-- tab 2 -->
                 <div class="tab-pane fade w-100 position-absolute" id="venda-online">
-                    <div class="d-flex">
-                        <div class="tab-text">
+                    <div class="row">
+                        <div class="col-lg-5 tab-text">
                             <h2>Tab 2</h2>
                             <p>
                                 Com um ambiente desenvolvido para atender diferentes categorias de sites,
@@ -170,15 +186,15 @@
                             </p>
                         
                         </div>
-                        <div class="tab-image">
+                        <div class="col-lg-7 tab-image">
                             <img src="images/inicial-interago.png" alt="imagem" style="width: 100%; height: auto;">
                         </div>
                     </div>
                 </div>
                 <!-- tab 3 -->
                 <div class="tab-pane fade w-100 position-absolute" id="gerencie">
-                    <div class="d-flex">
-                        <div class="tab-text">
+                    <div class="row">
+                        <div class="col-lg-5 tab-text">
                             <h2>Tab 3</h2>
                             <p>
                                 Com um ambiente desenvolvido para atender diferentes categorias de sites,
@@ -187,15 +203,15 @@
                             </p>
                             <a href="#" class="btn">Começar agora</a>
                         </div>
-                        <div class="tab-image">
+                        <div class="col-lg-7 tab-image">
                             <img src="images/inicial-interago.png" alt="imagem" style="width: 100%; height: auto;">
                         </div>
                     </div>
                 </div>
                 <!-- tab 4 -->
                 <div class="tab-pane fade w-100 position-absolute" id="obter-result">
-                    <div class="d-flex">
-                        <div class="tab-text">
+                    <div class="row">
+                        <div class="col-lg-5 tab-text">
                             <h2>Tab 4</h2>
                             <p>
                                 Com um ambiente desenvolvido para atender diferentes categorias de sites,
@@ -204,7 +220,7 @@
                             </p>
                             <a href="#" class="btn">Começar agora</a>
                         </div>
-                        <div class="tab-image">
+                        <div class="col-lg-7 tab-image">
                             <img src="images/inicial-interago.png" alt="imagem" style="width: 100%; height: auto;">
                         </div>
                     </div>
